[gd_scene load_steps=7 format=2]

[ext_resource path="res://Screens/BaseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/main-theme.tres" type="Theme" id=2]
[ext_resource path="res://Screens/OptionsScreen.gd" type="Script" id=3]
[ext_resource path="res://Assets/GravityBold-8.tres" type="DynamicFont" id=4]
[ext_resource path="res://Screens/SoundSlider.gd" type="Script" id=5]
[ext_resource path="res://Screens/MusicSlider.gd" type="Script" id=6]

[node name="OptionsScreen" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 118.0
margin_top = 43.0
margin_right = 394.0
margin_bottom = 244.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 60

[node name="Title" parent="MarginContainer/VBoxContainer" index="0"]
margin_right = 276.0
text = "Options"
align = 1
valign = 1

[node name="Buttons" parent="MarginContainer/VBoxContainer" index="1"]
margin_top = 72.0
margin_right = 276.0
margin_bottom = 201.0
custom_constants/separation = 50

[node name="Sliders" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Buttons" index="0"]
margin_right = 276.0
margin_bottom = 54.0
custom_constants/separation = 30

[node name="MusicOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons/Sliders" index="0"]
margin_right = 276.0
margin_bottom = 12.0
theme = ExtResource( 2 )
script = ExtResource( 6 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions" index="0"]
margin_right = 69.0
margin_bottom = 12.0
text = "Music: "

[node name="Music" type="HScrollBar" parent="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions" index="1"]
margin_left = 73.0
margin_right = 273.0
margin_bottom = 12.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="Container" type="Node2D" parent="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions" index="2"]
visible = false
position = Vector2( 200, -24 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions/Container" index="0"]
margin_right = 40.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Teste"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions/Container" index="1"]
wait_time = 0.5
one_shot = true

[node name="SoundOptions" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Buttons/Sliders" index="1"]
margin_top = 42.0
margin_right = 276.0
margin_bottom = 54.0
theme = ExtResource( 2 )
script = ExtResource( 5 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions" index="0"]
margin_right = 72.0
margin_bottom = 12.0
text = "Sound: "

[node name="Sound" type="HScrollBar" parent="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions" index="1"]
margin_left = 76.0
margin_right = 276.0
margin_bottom = 12.0
rect_min_size = Vector2( 200, 0 )
size_flags_vertical = 4
theme = ExtResource( 2 )

[node name="Container" type="Node2D" parent="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions" index="2"]
visible = false
position = Vector2( 200, -24 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions/Container" index="0"]
margin_right = 40.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 4 )
text = "Teste"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions/Container" index="1"]
wait_time = 0.5
one_shot = true

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer/Buttons" index="1"]
margin_left = 110.0
margin_top = 104.0
margin_right = 166.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 4
text = "Back"

[node name="TestMusic" type="AudioStreamPlayer" parent="." index="1"]
bus = "Music"

[node name="TestSound" type="AudioStreamPlayer" parent="." index="2"]
bus = "Sound"
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions/Music" to="." method="_on_Music_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions/Music" to="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions" method="_on_Music_value_changed"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions/Container/Timer" to="MarginContainer/VBoxContainer/Buttons/Sliders/MusicOptions" method="_on_Timer_timeout"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions/Sound" to="." method="_on_Sound_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions/Sound" to="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions" method="_on_Sound_value_changed"]
[connection signal="timeout" from="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions/Container/Timer" to="MarginContainer/VBoxContainer/Buttons/Sliders/SoundOptions" method="_on_Timer_timeout"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Back" to="." method="_on_Back_pressed"]
